修复maven配置问题